--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,33 +1,59 @@
 trigger:
 - master
 
-pool:
-       name: Default
-       demands: mycap
-
 stages:
-  - stage: Welcome
+  - stage: Build
     jobs:
-    - job: PrintMessage
+      - job: PrintMessage
+        pool:
+          name: Default
+          demands: mycap1
+        steps:
+          - script: echo '****************'
+          - script: echo 'starting with test'
+          - script: echo '*****************'
+           
+      - job: Build
+        pool:
+         name: Default
+         demands: mycap
 
-      steps:
-          - script: echo 'Hello User!!!'
-    - job: AssignTask
+        variables:
+           solution: '**/*.sln'
+           buildPlatform: 'Any CPU'
+           buildConfiguration: 'Release'
+ 
+        steps:
+        - task:  NuGetToolInstaller@1
+        - task: NuGetCommand@2
+          inputs:
+            restoreSolution: '$(solution)'
+        - task: VSBuild@1
+          inputs:
+           solution: '$(solution)'
+           platform: '$(buildPlatform)'
+           configuration: '$(buildConfiguration)'
 
-      steps:
-      - script: echo 'Different Tasks are Building,Testing and Packaging'
-    
-  - stage: StartTask
-    jobs:
-      - job: Task1
-        steps: 
-        - script: echo 'Task1 started'
+        - script: echo 'Building application'
         
-  - stage: EndTask
+  - stage: Test
     jobs:
-    - job: Task2
-      steps:
-        - script: echo 'Task 1 ended'
+       - job: Test
+         pool:
+          name: Default
+          demands: mycap1
+        
+         variables:
+           solution: '**/*.sln'
+           buildPlatform: 'Any CPU'
+           buildConfiguration: 'Release'
+
+         steps:
+           - task: VSTest@2
+             inputs:
+              platform: '$(buildPlatform)'
+              configuration: '$(buildConfiguration)'
+           - script: echo 'Testing application'
 
 
 
